# nagger

./: .gitignore  CONTRIBUTE.md  LICENSE  README.md  Vagrantfile
.github/workflows/: docker.yml  sast.yml  sca.yml  tests.yml
ci/: build_image.sh  build_nagger.sh  image.sh  install_docker.sh  provision.sh
ci/docker/release/: Dockerfile
existing_lints/: Cargo.toml  rust-toolchain
existing_lints/.cargo/: config.toml
existing_lints/index_access_check/: Cargo.toml
existing_lints/index_access_check/src/: index_access_check.rs  lib.rs
existing_lints/index_access_check/ui/: index_access_check.rs  index_access_check.stderr
existing_lints/instant/: Cargo.toml
existing_lints/instant/src/: instant.rs  lib.rs
existing_lints/instant/ui/: instant.rs  instant.stderr
existing_lints/large_futures/: Cargo.toml
existing_lints/large_futures/src/: large_futures.rs  lib.rs
existing_lints/large_futures/ui/: large_futures.rs  large_futures.stderr
existing_lints/mpsc_blocking_send/: Cargo.toml
existing_lints/mpsc_blocking_send/src/: lib.rs  mpsc_blocking_send.rs
existing_lints/mpsc_blocking_send/ui/: mpsc_blocking_send.rs  mpsc_blocking_send.stderr
existing_lints/tokio_time_interval/: Cargo.toml
existing_lints/tokio_time_interval/src/: lib.rs  tokio_time_interval.rs
existing_lints/tokio_time_interval/ui/: tokio_time_interval.rs  tokio_time_interval.stderr
existing_lints/unwrap_check/: Cargo.toml
existing_lints/unwrap_check/src/: lib.rs  unwrap_check.rs
existing_lints/unwrap_check/ui/: unwrap_check.rs  unwrap_check.stderr
scripts/: names.sh
