[package]
name = "large_futures"
version = "0.1.0"
edition = "2021"
description = "Prevents you from creating large futures, which can cause big problems on some platforms"

[[example]]
name = "ui"
path = "ui/large_futures.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", tag = "rust-1.88.0"}
dylint_linting.workspace = true
if_chain = "1.0.2"

[dev-dependencies]
dylint_testing.workspace = true
