[package]
name = "unwrap_check"
version = "0.1.0"
edition = "2021"
description = "I hate you and I want you to suffer"

[lib]
crate-type = ["cdylib"]

[dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", tag = "rust-1.72.0"}
dylint_linting = "2.0.9"
if_chain = "1.0.2"

[dev-dependencies]
dylint_testing = "2.0.9"
